darkin dark mode and bug fixes

--- a/front/src/css.css
+++ b/front/src/css.css
@@ -8,22 +8,23 @@
 
 
 .dark {
-  --background: #1b1b1b;
+  /* --background: #1b1b1b; */
+  --background:#000000;
   --click: rgb(100, 100, 100);
-  --text: rgb(246, 246, 246);
+  --text: #dbdbdb;
   --link: #3f84c0;
   --brackets: #a7b6c2;
   --block-ref: rgb(63, 63, 63);
-  --bullet: #879189;
+  --bullet: #8f9091;
   --border: #afbeca;
   --bar: #565d63;
   --break: #838e97;
   --highlight: rgb(110, 93, 16);
   --page-ref: #2bcc5b;
   --shadow: rgb(98, 98, 98);
-  --notification: #2e4736;
-  --query-background: #26352a;
-  --editing-background: #040404;
+  --notification: #183d23;
+  --query-background: #051809;
+  --editing-background: #111111;
   --selected: #2d4a66;
 }
 
@@ -50,7 +51,7 @@
 input,
 button,
 a {
-  font-family: "Inter", Ahorani, Verdana;
+  font-family: Inter;
 }
 
 input {
@@ -86,7 +87,7 @@ span {
 
 body {
   scrollbar-width: 0px;
-  font-family: Inter, Aharoni, Verdana;
+  font-family: Inter;
   font-weight: normal;
   margin: 0;
   color: var(--text);
@@ -160,13 +161,13 @@ a:visited {
 }
 
 #options-frame button{
-  border-radius:4px;
+  border-radius:10px;
   padding:6px;
   display:block;
 }
 
 #create-new-store{
-  border-radius:4px;
+  border-radius:10px;
   padding:6px;
   font-size:1.1em;
 }
@@ -196,8 +197,8 @@ a:visited {
   flex-direction: column;
   background-color: var(--background);
   font-size: 1.3em;
-  border-radius: 5px;
-  box-shadow: 0 0 8px var(--shadow);
+  border-radius: 10px;
+  box-shadow: 0 0 6px 0px var(--shadow);
 }
 
 .autocomplete__suggestion[data-selected="true"],
@@ -209,7 +210,7 @@ a:visited {
 .autocomplete__suggestion,
 .template__suggestion,
 .command__suggestion {
-  padding: 7px;
+  padding: 10px;
   cursor: pointer;
   border-radius: 5px;
 }
